--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,75 @@
-<p>home works!</p>
+<div class="text-zinc-200 flex-col">
+    <h1 class="font-bold text-2xl">Maurício Mello</h1>
+
+    <h2 class="font-bold text-xl">Resumo</h2>
+
+    <span>
+        Desenvolvedor com quase dois anos de experiência na área. Trabalhei remotamente como full-stack em empresas de pequeno e médio porte desenvolvendo soluções para e-commerces, landing pages e aplicativos mobile e outros. Apesar da maior afinidade ser com front-end, também tenho muito interesse no back-end. Tenho familiaridade, principalmente, com Typescript, Node, React, React Native, Next, ASP.NET e mySQL Server. Procuro sempre me atualizar e aprimorar meus conhecimentos, já fiz diversos cursos, bootcamps e projetos pessoais. Recentemente, dei inicio a uma formação acadêmica em Análise e Desenvolvimento de Sistemas pela 
+        <a [href]="institutionReferenceLink" target="_blank">FATEC</a>
+    </span>
+
+    <h2 class="font-bold text-xl">Experiência</h2>
+
+    <div>
+        <h3>A2Web</h3>
+        <span>Desenvolvedor júnior</span>
+        <span>Março 2022 - Julho 2023</span>
+        <ul>
+            <li>Desenvolvimento e manutenção de aplicações web utilizando HTML, CSS, JavaScript, PHP, jQuery e frameworks como React</li>
+            <li>Manipulação e criação de banco de dados utilizando, principalmente mySQL</li>
+            <li>Trabalho em equipe para desenvolver soluções eficazes</li>
+            <li>Experiência de Ux Ui desenvolvendo layouts no Figma</li>
+        </ul>
+        <span>
+            Primeira experiência na área. Aproveitei este momento para desenvolver softskills, e consolidar minha base nas principais ferramente do front-end.
+            Também estudei e tive contato com back-end e banco de dados. 
+            Percebi, que a área é sobre resolver problemas e que as linguagens  de programação são apenas uma ferramenta para resolve-los.
+            Aprendi sobre segurança da informação, performace, versionamento e boas práticas.
+        </span>
+    </div>
+
+    <div>
+        <h3>OasisIT</h3>
+        <span>Desenvolvedor júnior</span>
+        <span>Setembro 2022</span>
+        <ul>
+            <li>Desenvolvimento e manutenção de sites e aplicativos web utilizando Typescript, React, Angular e .NET</li>
+            <li>Desenvolvimento de aplicativos mobile, utilizando React Native</li>
+            <li>Manipulação e criação de soluções utilizando banco de dados, principalmente SQL Server</li>
+        </ul>
+    </div>
+
+    <div>
+        <h2 class="font-bold text-xl">Projetos</h2>
+        <span>
+            Ao longo da minha jornada, desenvolvi diversos projetos que podem ser encontrados no meu <a [href]="githubReferenceLink" target="_blank">Github</a>. Os principais projetos possuem uma descrição com as tecnologias utilizadas, funcionalidades e as telas da aplicação
+        </span>
+        
+        <h3>ToDo | Gerenciador de tarefas</h3>
+        <span>Criar, marcar como concluída e deletar tarefas</span>
+        <span>PROJETO</span>
+    </div>
+
+    <div>
+        <h3>MujapiraUI | Design System</h3>
+        <span>Acesse de maneira fácil, uma gama de componentes, estilos e cores. Publicado no NPM</span>
+        <span>PROJETO</span>
+    </div>
+
+    <div>
+        <h3>WormNotes | Gerenciador de anotações</h3>
+        <span>Aplicação notion-like que permite criar e editar notas</span>
+        <span>PROJETO</span>
+    </div>
+
+    <div>
+        <h3>RentX | Aluguel de carros</h3>
+        <span>Aplicação que simula uma locadora de carros</span>
+        <span>PROJETO</span>
+    </div>
+
+    <div>
+        <h3>Agenda Facil | Agendamentos no google agenda</h3>
+        <span>PROJETO</span>
+    </div>
+</div>
