--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<main>
+<main class="max-w-7xl flex-col items-center justify-between mx-auto h-full min-h-screen">
   <app-header />
-  <router-outlet />
+  <router-outlet/>
   <app-footer />
 </main>
